<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunDetailActivity">

    <fragment
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="com.example.runningtracker.RunDetailActivity" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="96dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/runDetailPace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/avg_pace_int"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/runDetailDuration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/runDetailDistance"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/runDetailDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/total_run_int"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/runDetailDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/total_km_int"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/avg_pace"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/runDetailPace"
        app:layout_constraintStart_toStartOf="@+id/runDetailPace"
        app:layout_constraintTop_toBottomOf="@+id/runDetailPace" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/duration_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/runDetailDuration"
        app:layout_constraintStart_toStartOf="@+id/runDetailDuration"
        app:layout_constraintTop_toBottomOf="@+id/runDetailDuration" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_kilometers"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/runDetailDistance"
        app:layout_constraintStart_toStartOf="@+id/runDetailDistance"
        app:layout_constraintTop_toBottomOf="@+id/runDetailDistance" />

</android.support.constraint.ConstraintLayout>