<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunningActivity">

    <View
        android:id="@+id/upperView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/lowerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/lowerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upperView" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="40dp"
        android:adjustViewBounds="true"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/pause_button"
        android:onClick="onPauseButtonPressed"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/lowerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pause_button" />

    <ImageButton
        android:id="@+id/stopButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="40dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/stop_button"
        android:onClick="onStopButtonPressed"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/stop_button" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="40dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/play_button"
        android:onClick="onPlayButtonPressed"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/play_button" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/fira_sans_bold_italic"
        android:text="@string/distance_text"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lowerView" />

    <TextView
        android:id="@+id/durationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_bold_italic"
        android:text="@string/duration_text"
        android:textColor="@color/primaryText"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/lowerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/upperView" />

    <TextView
        android:id="@+id/paceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fira_sans_bold_italic"
        android:text="@string/pace_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceText" />

</android.support.constraint.ConstraintLayout>